terra/route table attach.tf
#create route rable attach to our subnet to attach new route table not table by default
resource "aws_route_table_association" "public_1_rt_a" {
    subnet_id       = aws_subnet.some_public_subnet.id
    route_table_id  = aws_route_table.public_rt.id
}
